everything working but the search

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
       <form style="text-align:center" id="search-form"> 
         <label style="color: white">Search for a pokemon</label>
-        <input type="search" id="query" name="name" placeholder="Enter a pokemon's name">
+        <input type="search" name="q" placeholder="Enter a pokemon's name">
         <button id="search-btn">Search</button>
       </form>
     </div>
